Fixed links & removed horiz scroll on mobile

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -11,6 +11,7 @@
   &__body {
     margin-top: 60px;
 
+    overflow: hidden;
     @include onTablet {
       margin-top: 76px;
     }
