--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -95,8 +95,8 @@
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 245px;
-    height: 273px;
+    width: 200px;
+    height: 230px;
 
     @include onTablet {
       width: 443px;
